# EIT-Learning-AI

backend/: README.md  celery_app.py  chunking.py  config.py  db.py  ingestion_service.py  llm_clients.py  main.py  models.py  parsing.py  pyproject.toml  query_service.py  rag_backend.db  requirements.txt  routers_documents.py  routers_query.py  schemas.py  storage.py  tasks.py  vectorstore.py
backend/chroma_data/: chroma.sqlite3
backend/storage/da098add-5e53-4e26-8f7c-8651d756b0af/: test_upload.txt
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/[chatId]/: page.tsx
frontend/components/chat/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/components/layout/: AppShell.tsx  LeftSidebar.tsx  RightSidebar.tsx
frontend/components/resources/: ResourceItem.tsx  ResourceList.tsx  UploadButton.tsx
frontend/context/: AppContext.tsx
frontend/services/: apiClient.ts  chatService.ts  resourceService.ts
frontend/types/: index.ts
